# hri_msgs

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
msg/: ActionUnits.msg  AgeAndGender.msg  AgeGender.msg  AgeGenderStamped.msg  AudioDataIdStamped.msg  AudioFeatures.msg  Body.msg  BodyAttitude.msg  BodyLang.msg  BodyPose.msg  BodyPosture.msg  BodyStamped.msg  BoolIdStamped.msg  Emotion.msg  EmotionsStamped.msg  EngagementLevel.msg  Expression.msg  Face.msg  FaceROIStamped.msg  FaceStamped.msg  Faces.msg  FacesActionUnits.msg  FacesLandmarks.msg  FacialActionUnits.msg  FacialLandmarks.msg  FacialLandmarksStamped.msg  Float32IdStamped.msg  Gaze.msg  GazeSenderReceiver.msg  GazesStamped.msg  Gesture.msg  Group.msg  GroupsStamped.msg  HeadPose.msg  HeadPoseStamped.msg  IdHeader.msg  IdsList.msg  IdsMatch.msg  ImageIdStamped.msg  JointStateIdStamped.msg  (+14 more)
msg/social_nets msgs/: BodyLang.msg  Face.msg  Faces.msg
srv/: SelectHumans.srv  UpdateHuman.srv
