<?xml version="1.0"?>
<package>
  <name>hri_msgs</name>
  <version>0.1.0</version>
  <description>Messages, services and action definitions useful for Human-Robot Interaction</description>

  <maintainer email="severin.lemaignan@brl.ac.uk">Séverin Lemaignan</maintainer>
  <author email="severin.lemaignan@brl.ac.uk">Séverin Lemaignan</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
