<?xml version="1.0"?>
<package format="3">
  <name>hri_msgs</name>
  <version>0.9.0</version>
  <description>Messages, services and action definitions useful for Human-Robot Interaction</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>sensor_msgs</depend>

</package>
